# Zee-Cut

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  fix_gui_robust.py  fix_perf.py  gui.py  local.properties.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  settings.gradle.kts
.github/workflows/: ci.yml  publish-pypi.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ifauze/zeecut/: MainActivity.kt
app/src/main/java/com/ifauze/zeecut/model/: Device.kt
app/src/main/java/com/ifauze/zeecut/net/: NetworkScanner.kt  RootShell.kt  SpoofController.kt
app/src/main/java/com/ifauze/zeecut/ui/: DeviceListAdapter.kt
app/src/main/jni/: CMakeLists.txt  arp_spoof.c  net_common.h
app/src/main/res/drawable/: bg_chip.xml
app/src/main/res/layout/: activity_main.xml  device_row.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/ifauze/zeecut/net/: NetworkScannerTest.kt
core/: __init__.py  admin.py  bandwidth.py  config.py  models.py  network.py  oui.py  platform.py  shaper.py  updater.py
docs/: DEVELOPMENT.md
docs/releases/: v0.1.1.md  v0.1.2.md
docs/superpowers/specs/: 2026-07-12-zee-cut-android-design.md
installer/: zee-cut.nsi
tests/: test_network_engine.py  test_ui.py  test_updater.py
tools/: generate_icon.py
ui/: app.py  device_list.py  dialogs.py  header.py  theme.py  toolbar.py
